<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_details"
    android:paddingBottom="5dp"
    >
   <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="5dp"
    	android:paddingBottom="5dp">
    	
	<TextView 
			android:id="@+id/detail_nom_leon"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="15dp"
		    android:paddingLeft="5dp"
		    android:textSize="22sp" 
		    android:textStyle="bold"
		    android:textColor="@color/white"
		    android:gravity="center_horizontal"
		    android:lines="2"
		    android:text="Léon de Bruxelles - Nom du Leon"/>
	
		<TextView 
			android:id="@+id/detail_adrese_complete_leon"
			android:layout_below="@+id/detail_nom_leon"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:paddingLeft="5dp"
		    android:textSize="18sp"
		    android:lines="2"
		    android:textColor="@color/white"
		    android:text="59000 Lille"/>
		
	   <TextView 
			android:id="@+id/detail_horaires_leon"
			android:layout_below="@+id/detail_adrese_complete_leon"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:paddingLeft="5dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="5dp"
		    android:layout_marginBottom="5dp"
		    android:textSize="14sp" 
		    android:textColor="@color/black"
		    android:background="@drawable/shape_details_horaires"
		    android:text="Horaires d'ouverture"/>
	   
	   <ImageView
	        android:id="@+id/detail_image_tel"
	        android:contentDescription="@string/content_tel"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_below="@+id/detail_horaires_leon"
	        android:layout_centerHorizontal="true"
	        android:src="@drawable/tel" />
	   
	    <TextView 
			android:id="@+id/detail_tel_leon"
			android:layout_below="@+id/detail_image_tel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:textSize="18sp"
		    android:textColor="@color/white"
		    android:text="03 21 45 67 32"/>
	   
	   <RelativeLayout
	        android:id="@+id/detail_relative_layout_photo"
	        android:layout_below="@+id/detail_tel_leon"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
		    
		    <ImageView
				android:id="@+id/detail_photo_leon"
				android:contentDescription="@string/content_description_img_leon"
				android:layout_centerInParent="true"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:paddingTop="5dp"
			    android:paddingLeft="5dp"
			    android:paddingRight="5dp"
			    android:src="@drawable/no_image_available"
			/>
		    
		   <ProgressBar
		        android:id="@+id/detail_progress_bar_photo_leon"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:visibility="invisible"
	 		/>

	    </RelativeLayout>

		
	   <TextView 
			android:id="@+id/detail_informations"
			android:layout_below="@+id/detail_relative_layout_photo"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:paddingLeft="5dp"
		    android:textSize="18sp" 
		    android:textColor="@color/white"
		    android:text="@string/detail_information"/>
	   
	    <ImageView
	        android:id="@+id/detail_parking_leon"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:paddingRight="5dp"
	        android:layout_marginLeft="5dp"
	        android:layout_below="@+id/detail_informations"
	        android:contentDescription="@string/content_parking_img_leon"
	        android:src="@drawable/parking" 
	        android:visibility="visible"/>

	    <ImageView
	        android:id="@+id/detail_handicape_leon"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_below="@+id/detail_informations"
	        android:layout_toRightOf="@+id/detail_parking_leon"
	        android:layout_alignParentBottom="true"
	        android:contentDescription="@string/content_handicape_img_leon"
	        android:src="@drawable/handicape" 
	        android:visibility="visible"/>
    	
	</RelativeLayout>	
	
</ScrollView>		
